Update on user input to mongo

--- a/templates/create.template.html
+++ b/templates/create.template.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <form method="POST">
-        <label>Name</label>
-        <input type="text" name="user_name"/>
+        <label>First Name</label>
+        <input type="text" name="first_name"/>
+        <label>Last Name</label>
+        <input type="text" name="last_name"/>
         <br/>
         <label>Experience</label>
         <input type="text" name="experience"/>
         <br/>
+        <label>Certification</label>
+        <input type="text" name="certification"/>
         <input type="submit"/>
     </form>
 
