Added dive and sighting inputs

--- a/templates/create.template.html
+++ b/templates/create.template.html
@@ -18,10 +18,43 @@
         <br/>
         <label>Certification</label>
         <input type="text" name="certification"/>
+        <br/>
+        <label>Email Address</label>
+        <input type="text" name="email"/>
         <input type="submit"/>
     </form>
 
+    <form method="POST" action="">
+        <label>Location</label>
+        <input type="text" name="location"/>
+        <br/>
+        <label>Dive Site</label>
+        <input type="text" name="divesite"/>
+        <br/>
+        <label>Temperature</label>
+        <input type="text" name="temperature"/>
+        <br/>
+        <label>Depth</label>
+        <input type="text" name="depth"/>
+        <br/>
+        <label>Date</label>
+        <input type="date" name="divedate"/>
+        <br/>
+        <label>Comments</label>
+        <input type="text" name="divecomments"/>
+        <input type="submit"/>
+    </form>
 
-
+    <form method="POST" action="">
+        <label>Species</label>
+        <input type="text" name="species"/>
+        <br/>
+        <label>Photos</label>
+        <input type="text" name="divephotos"/>
+        <br/>
+        <label>Comments</label>
+        <input type="text" name="sightingcomments"/>
+        <input type="submit"/>
+    </form>
 </body>
 </html>
