Changes to email prompt route

--- a/templates/show.template.html
+++ b/templates/show.template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        {{database_email}}
+        <h1>Welcome {{database.name.firstname}} {{database.name.lastname}}</h1>
     </div>
 
 
