--- a/templates/create.template.html
+++ b/templates/create.template.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <form method="POST">
         <label>First Name</label>
         <input type="text" name="first_name"/>
@@ -19,11 +20,12 @@
         <label>Certification</label>
         <input type="text" name="certification"/>
         <br/>
-        <label>Email Address</label>
-        <input type="text" name="email"/>
+        <label>Email</label>
+        <input type="text" name="email" value="{{useremail}}"/>
         <input type="submit"/>
     </form>
 
+<!-- 
     <form method="POST" action="">
         <label>Location</label>
         <input type="text" name="location"/>
@@ -55,6 +57,9 @@
         <label>Comments</label>
         <input type="text" name="sightingcomments"/>
         <input type="submit"/>
-    </form>
+    </form> -->
+
+
+
 </body>
 </html>
