--- a/templates/create.template.html
+++ b/templates/create.template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <form method="POST">
+    <form method="POST" action="{{ url_for('createuser') }}">
         <label>First Name</label>
         <input type="text" name="first_name"/>
         <label>Last Name</label>
