Added route after user created profile

--- a/templates/create.template.html
+++ b/templates/create.template.html
@@ -21,7 +21,7 @@
         <input type="text" name="certification"/>
         <br/>
         <label>Email</label>
-        <input type="text" name="email" value="{{useremail}}"/>
+        <input type="text" name="useremail" value="{{useremail}}"/>
         <input type="submit"/>
     </form>
 
