--- a/templates/divelogs.template.html
+++ b/templates/divelogs.template.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div>
-        <h1>Welcome {{database.name.firstname}} {{database.name.lastname}} {{database._id}}</h1>
+        <h1>{{dives.location}} {{dives.divesite}}</h1>
+        <p> {{dives.comments}}</p>
     </div>
 
-    <a href="{{ url_for('search_dive' , userid=database._id) }}">See Dives</a>
+   
 
 </body>
 </html>
