--- a/templates/show.template.html
+++ b/templates/show.template.html
@@ -12,6 +12,6 @@
     </div>
 
     <a href="{{ url_for('search_dive' , userid=database._id) }}">See Dives</a>
-    <a href="{{ url_for('search_sights' , userid=database._id) }}">See Sights</a>
+    <a href="{{ url_for('search_sights' , userid=database._id) }}">See all Sightingss</a>
 </body>
 </html>
