Added update functions for dives

--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -16,6 +16,7 @@
         <li>Site: {{r.divesite}}</li>
         <a href="{{ url_for('search_sights_per_dive' , diveid=r._id) }}">See sightings for this dive</a>
         <a href="{{ url_for('create_sighting' , diveid=r._id , userid=r.userid) }}">Add a sighting </a>
+        <a href="{{ url_for('edit_dive' , diveid=r._id , userid=r.userid) }}">Edit Dive </a>
         </ul>
         {%endfor%}
     </div>
