--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Welcome {{database.name.firstname}} {{database.name.lastname}} {{database._id}}</h1>
+        <h1>Welcome {{database.name.firstname}} {{database.name.lastname}}</h1>
     </div>
 
     <div>
