Fixed "depth" null issue

--- a/templates/createdive.template.html
+++ b/templates/createdive.template.html
@@ -19,7 +19,7 @@
         <input type="text" name="temperature"/>
         <br/>
         <label>Depth</label>
-        <input type="text" name="Depth"/>
+        <input type="text" name="depth"/>
         <br/>
         <label>Date</label>
         <input type="date" name="date"/>
