--- a/templates/editdive.template.html
+++ b/templates/editdive.template.html
@@ -19,7 +19,7 @@
         <input type="text" name="temperature" value="{{dives.temperature}}"/>
         <br/>
         <label>Depth</label>
-        <input type="text" name="Depth" value="{{dives.depth}}"/>
+        <input type="text" name="depth" value="{{dives.depth}}"/>
         <br/>
         <label>Date</label>
         <input type="date" name="date" value="{{dives.date}}"/>
