Added sightings update function

--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -16,6 +16,8 @@
         <li>Species: {{r.species}}</li>
         <li>Photos: {{r.photos}}</li>
         <li>Comments: {{r.comments}}</li>
+        <a href="{{ url_for('edit_sight' , diveid=r.diveid , userid=r.userid) }}">Edit Sighting </a>
+
         </ul>
         {%endfor%}
     </div>
