--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -17,7 +17,7 @@
         <li>Photos: {{r.photos}}</li>
         <li>Comments: {{r.comments}}</li>
         <a href="{{ url_for('edit_sight' , diveid=r.diveid , userid=r.userid) }}">Edit Sighting </a>
-        <a href="{{ url_for('delete' , diveid=0 , userid=0, sightid=r._id) }}">Delete Sighting </a>
+        <a href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status=sights) }}">Delete Sighting </a>
         </ul>
         {%endfor%}
     </div>
