Fixed edit sight -sightid

--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -16,7 +16,7 @@
         <li>Species: {{r.species}}</li>
         <li>Photos: {{r.photos}}</li>
         <li>Comments: {{r.comments}}</li>
-        <a href="{{ url_for('edit_sight' , diveid=r.diveid , userid=r.userid) }}">Edit Sighting </a>
+        <a href="{{ url_for('edit_sight' , sightid=r._id , userid=r.userid) }}">Edit Sighting </a>
         <a href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status=sights) }}">Delete Sighting </a>
         </ul>
         {%endfor%}
