--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -21,6 +21,8 @@
         <a href="{{ url_for('search_sights_per_dive' , diveid=r._id) }}">See sightings for this dive</a>
         <a href="{{ url_for('create_sighting' , diveid=r._id , userid=r.userid) }}">Add a sighting </a>
         <a href="{{ url_for('edit_dive' , diveid=r._id , userid=r.userid) }}">Edit Dive </a>
+        <a href="{{ url_for('delete' , diveid=r._id , userid=r.userid, sightid=0, delete_status='d') }}">Delete Dive </a>
+
         </ul>
         {%endfor%}
     </div>
