--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -18,6 +18,8 @@
 
     <div>
     <a href="{{ url_for('createdive' , userid=database._id) }}">Create new dive log</a>
+    </br>
+    <a href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}">Delete User </a>
     </div>
 
 </body>
