Added in search for testing

--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <form method="POST">
@@ -14,6 +15,11 @@
     </form>
 
 
+    <form href="{{ url_for('search_all_process') }}">
+        <label>Search</label>
+        <input type="text" name="search"/>
+        <input type="submit"/>   
+    </form>
 
 </body>
 </html>
