Added user photo uploadcare

--- a/templates/createuser.template.html
+++ b/templates/createuser.template.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script>UPLOADCARE_PUBLIC_KEY = "{{uploadcare_public_key}}";</script>
+    <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -22,6 +24,8 @@
         <br/>
         <label>Email</label>
         <input type="text" name="useremail" value="{{useremail}}"/>
+        <br/>
+        <input type="hidden" role="uploadcare-uploader" name="photos" />
         <input type="submit"/>
     </form>
 
