--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -10,6 +10,9 @@
     <div>
         <h1>Welcome {{database.name.firstname}} {{database.name.lastname}}</h1>
     </div>
+    <div>
+        <img src= "{{database.photos}}"/>
+    </div>
 
     <div>
     <a href="{{ url_for('search_dive' , userid=database._id) }}">See Dives</a>
@@ -21,6 +24,8 @@
     </br>
     <a href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}">Delete User </a>
     </div>
+
+    
 
 </body>
 </html>
