Display last 5 updates to sightings collection

--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
+
+<div>
+    {%for r in lastentry %}
+         <ul>
+        <li>Species: {{r.species}}</li>
+        <li><img src= "{{r.photos}}"/></li>
+        <li>Comments: {{r.comments}}</li>
+        <a href="{{ url_for('edit_sight' , sightid=r._id , userid=r.userid) }}">Edit Sighting </a>
+        <a href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status='s') }}">Delete Sighting </a>
+        </ul>
+        {%endfor%}
+</div>
+
     <form method="POST">
         <label>Email Address</label>
         <input type="text" name="useremail"/>
