--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "index.template.html" %}
+{% block content %}
+
     <div>
         <h1>{{sights.species}} {{sights.photos}}</h1>
         <p> {{sights.comments}}</p>
@@ -22,7 +16,5 @@
         {%endfor%}
     </div>
 
-   
 
-</body>
-</html>
+{% endblock %}
