--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "index.template.html" %}
+
+
+{% block content %}
+
     <div>
         <h1>{{sights.species}} {{sights.photos}}</h1>
         <p> {{sights.comments}}</p>
@@ -24,5 +20,4 @@
 
    
 
-</body>
-</html>
+{% endblock %}
