--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "index.template.html" %}
+{% block content %}
     <div>
         <h1>Welcome {{database.name.firstname}} {{database.name.lastname}}</h1>
     </div>
@@ -24,8 +17,5 @@
     
     <a href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}">Delete User </a>
     </div>
-
+{% endblock %}
     
-
-</body>
-</html>
