--- a/templates/search_all.template.html
+++ b/templates/search_all.template.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends "index.template.html" %}
+
+
+{% block content %}
     <div>
         <h1>All Dive logs</h1>
 
@@ -45,7 +40,5 @@
         {% endif %}
     </div>
 
-   
 
-</body>
-</html>
+{% endblock %}
