update table image sizing

--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -71,7 +71,7 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row" class="image-row"><img style="display:block;" width="70%" height="70%" src= "{{r.photos}}"/></th>
+      <th scope="row" class="image-row"><img src= "{{r.photos}}" alt="Image not found"/></th>
       <td>{{r.species}}</td>
       <td>{{r.comments}}</td>
       
