--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -57,6 +57,7 @@
     <div class='row'>
     <div class="col-2"></div>
     <div class="col-8 content-lastfive">
+    <img src="static/latestsightings.png"/>
     {%for r in lastentry %}
   
 
