--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -17,7 +17,7 @@
 
     <!-- nav bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#"><img src='static/logo.png'></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,8 +45,8 @@
       </li>
     </ul>
     <!-- search country,dive sites, species -->
-    <form class="form-inline my-2 my-lg-0" method="POST" action="{{ url_for('search_all_process') }}">
-      <input class="form-control mr-sm-2" type="search" placeholder="Country,Dive sites,Species" aria-label="Search" name="search">
+    <form class="form-inline my-2 my-lg-0" id='search-form' method="POST" action="{{ url_for('search_all_process') }}">
+      <input class="form-control mr-sm-2" id="allsearch-form" type="search" placeholder="Country,Dive sites,Species" aria-label="Search" name="search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 
@@ -72,9 +72,9 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row" class="image-row"><img src= "{{r.photos}}" alt="Image not found"/></th>
-      <td>{{r.species}}</td>
-      <td>{{r.comments}}</td>
+      <th scope="row" class="image-row get-species"><img src= "{{r.photos}}" alt="Image not found"/></th>
+      <td class='species-onclick get-species'>{{r.species}}</td>
+      <td class='get-species'>{{r.comments}}</td>
       
     </tr>
   </tbody>
