--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="static/style.css">
     <script>UPLOADCARE_PUBLIC_KEY = "{{uploadcare_public_key}}";</script>
     <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js" charset="utf-8"></script>
-    <title>Hello, world!</title>
+    <title>LogIt - The Virtual Dive Log</title>
   </head>
   <body>
     
