--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -1,6 +1,6 @@
 {% extends "index.template.html" %}
 {% block content %}
-    <div>
+    <!-- <div>
         <h1>Welcome {{database.name.firstname}} {{database.name.lastname}}</h1>
     </div>
     <div>
@@ -16,6 +16,48 @@
     <a href="{{ url_for('createdive' , userid=database._id) }}">Create new dive log</a>
     
     <a href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}">Delete User </a>
+    </div> -->
+
+
+    <div class='row'>
+    <div class="col-2"></div>
+    <div class="col-8 content-lastfive">
+
+
+    <table class="table">
+
+  <thead class="thead-dark">
+    <!-- <tr> -->
+    <tr>
+      <th scope="col" width="440px">{{database.name.firstname}} {{database.name.lastname}}</th>
+    </tr>
+    <tr>
+      <td width="440px" scope="row" ><img src="{{database.photos}}"  alt="Image not found"/></td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+        <th >Experience:{{database.experience}}</th>
+    </tr>
+    <tr>
+        <th >Certification:{{database.certification}}</th>
+    </tr>
+    <tr>
+        <th ><a href="{{ url_for('search_dive' , userid=database._id) }}">See all Dives</a></th>
+    </tr>
+     <tr>
+         <th ><a href="{{ url_for('search_sights' , userid=database._id) }}">See all Sightingss</a></th>
+    </tr>
+    <tr>
+         <th ><a href="{{ url_for('createdive' , userid=database._id) }}">Create new dive log</a></th>
+    </tr>
+    <tr>
+         <th ><a href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}">Delete User </a></th>
+    </tr>
+  </tbody>
+</table>
+</div>
+    <div class="col-2"></div>
     </div>
 {% endblock %}
     
