--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -6,46 +6,52 @@
     <table class="table">
       <thead class="thead-dark">
         <tr>
-          <th scope="col" id="profile-name">
+          <th colspan="2" id="profile-name">
             {{database.name.firstname}} {{database.name.lastname}}
           </th>
         </tr>
         <tr>
-          <td width="440px" scope="row">
+          <td width="440px" colspan="2">
             <img src="{{database.photos}}" alt="Image not found" width="80%" />
           </td>
         </tr>
       </thead>
       <tbody>
         <tr>
+         <th scope="col">
+            Experience
+          </th>
           <th>{{database.experience}}</th>
         </tr>
         <tr>
+        <th scope="col">
+            Certification
+          </th>
           <th>{{database.certification}}</th>
         </tr>
         <tr>
-          <th>
+          <th colspan="2">
             <a href="{{ url_for('search_dive' , userid=database._id) }}"
               >See all Dives</a
             >
           </th>
         </tr>
         <tr>
-          <th>
+          <th colspan="2">
             <a href="{{ url_for('search_sights' , userid=database._id) }}"
               >See all Sightingss</a
             >
           </th>
         </tr>
         <tr>
-          <th>
+          <th colspan="2">
             <a href="{{ url_for('createdive' , userid=database._id) }}"
               >Create new dive log</a
             >
           </th>
         </tr>
         <tr>
-          <th>
+          <th colspan="2">
             <a class='delete-btn'
               href="{{ url_for('delete' , diveid=0 , userid=database._id, sightid=0, delete_status='u') }}"
               >Delete User
