search with _id testing

--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -72,9 +72,10 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row" class="image-row get-species"><img src= "{{r.photos}}" alt="Image not found"/></th>
-      <td class='species-onclick get-species'>{{r.species}}</td>
+      <th scope="row" class="image-row get-species"   ><img src= "{{r.photos}}" alt="Image not found"/></th>
+      <td class='species-onclick get-species' >{{r.species}} </td>
       <td class='get-species'>{{r.comments}}</td>
+      <td hidden class='searchtesting'> {{r._id}} </td>
       
     </tr>
   </tbody>
