--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -25,6 +25,20 @@
           <td>{{r.species}}</td>
           <td>{{r.comments}}</td>
         </tr>
+        <tr>
+          <th colspan="3">
+            <a href="{{ url_for('edit_sight' , sightid=r._id , userid=r.userid) }}">
+            Edit Sighting</a
+            >
+          </th>
+        </tr>
+        <tr>
+          <th colspan="3">
+            <a class='delete-btn' href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status='s') }}">
+            Delete Sighting</a
+            >
+          </th>
+        </tr>
       </tbody>
     </table>
 
