update per dive sightings template

--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -3,21 +3,49 @@
 
 {% block content %}
 
-    <div>
-        <h1>{{sights.species}} {{sights.photos}}</h1>
-        <p> {{sights.comments}}</p>
-
-         {%for r in sights %}
-         <ul>
-        <li>Species: {{r.species}}</li>
-        <li><img src= "{{r.photos}}"/></li>
-        <li>Comments: {{r.comments}}</li>
-        <a href="{{ url_for('edit_sight' , sightid=r._id , userid=r.userid) }}">Edit Sighting </a>
-        <a href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status='s') }}">Delete Sighting </a>
-        </ul>
-        {%endfor%}
-    </div>
 
    
+
+
+   <div class="row">
+  <div class="col-2"></div>
+  <div class="col-8 content-lastfive">
+    <img src="{{ url_for('static', filename = 'divesightings.png') }}" />
+
+    {%for r in sights %}
+
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Image</th>
+          <th scope="col">Species</th>
+          <th scope="col">Comments</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row" class="image-row">
+            <img src="{{r.photos}}" alt="Image not found" />
+          </th>
+          <td>{{r.species}}</td>
+          <td>{{r.comments}}</td>
+        </tr>
+        <tr>
+          <th colspan="3">
+            <a href="{{ url_for('edit_sight' , sightid=r._id , userid=r.userid) }}">Edit Sighting </a>
+          </th>
+        </tr>
+        <tr>
+          <th colspan="3">
+            <a class='delete-btn' href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status='s') }}">Delete Sighting </a>
+          </th>
+        </tr>
+      </tbody>
+    </table>
+
+    {%endfor%}
+  </div>
+  <div class="col-2"></div>
+</div>
 
 {% endblock %}
