--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -32,14 +32,14 @@
         <tr>
           <th colspan="2">
             <a href="{{ url_for('search_dive' , userid=database._id) }}"
-              >See all Dives</a
+              >See all Dives for User</a
             >
           </th>
         </tr>
         <tr>
           <th colspan="2">
             <a href="{{ url_for('search_sights' , userid=database._id) }}"
-              >See all Sightingss</a
+              >See all Sightings for User</a
             >
           </th>
         </tr>
