--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -3,15 +3,8 @@
 <div class="row">
   <div class="col-2"></div>
   <div class="col-8 content-lastfive">
-    <table class="table">
-      <thead class="thead-dark">
-        <tr>
-          <th colspan="2" id="alldives">
-            ALL DIVE LOGS
-          </th>
-        </tr>
-      </thead>
-    </table>
+  <img src="{{ url_for('static', filename = 'divelogs.png') }}" />
+    
     {%for r in dives %}
     <table class="table">
       <thead class="thead-dark">
