added back buttons

--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -48,4 +48,9 @@
   <div class="col-2"></div>
 </div>
 
+
+<div>
+    <button class='back-btn' onclick="goBack()">Back To Dive Log</button>
+</div>
+
 {% endblock %}
