--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,3 @@
-a.search-button {
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
-
-    text-decoration: none;
-    color: initial;
-}
-
 /* last five sightings content */
 .content-lastfive {
     text-align: center;
@@ -21,6 +12,7 @@ a.search-button {
     width: 100%;
 }
 
+/* hover effect of tables */
 tr:hover {
     background-color: #f5f5f5;
 }
@@ -32,3 +24,21 @@ tr:hover {
 .delete-btn {
     color: red;
 }
+
+/* styling of back buttons */
+.back-btn {
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.back-btn:hover {opacity: 1}
