--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -94,4 +94,9 @@
   </div>
   <div class="col-2"></div>
 </div>
+
+
+<div>
+    <button class='back-btn' onclick="goBack()">Back To Profile</button>
+</div>
 {% endblock %}
