--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -47,4 +47,8 @@
   <div class="col-2"></div>
 </div>
 
+
+<div>
+    <button class='back-btn' onclick="goBack()">Back To Profile</button>
+</div>
 {% endblock %}
