--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -8,8 +8,8 @@
 
 
    <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8 content-lastfive">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8 content-lastfive">
     <img src="{{ url_for('static', filename = 'divesightings.png') }}" />
 
     {%for r in sights %}
@@ -45,7 +45,7 @@
 
     {%endfor%}
   </div>
-  <div class="col-2"></div>
+  <div class="col-0 col-lg-2"></div>
 </div>
 
 
