--- a/templates/search_all.template.html
+++ b/templates/search_all.template.html
@@ -5,8 +5,8 @@
    
 
 <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8 content-lastfive">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8 content-lastfive">
     <img src="{{ url_for('static', filename = 'search.png') }}" />
 
 {% if status == 'location' %}
@@ -133,7 +133,7 @@
 
 
   </div>
-  <div class="col-2"></div>
+  <div class="col-0 col-lg-2"></div>
 </div>
 
 
