--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -1,8 +1,8 @@
 {% extends "index.template.html" %} {% block content %}
 
 <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8 content-lastfive">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8 content-lastfive">
   <img src="{{ url_for('static', filename = 'divelogs.png') }}" />
     
     {%for r in dives %}
@@ -91,7 +91,7 @@
     </table>
     {%endfor%}
   </div>
-  <div class="col-2"></div>
+  <div class="col-0 col-lg-2"></div>
 </div>
 
 
