--- a/templates/allsights.template.html
+++ b/templates/allsights.template.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8 content-lastfive">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8 content-lastfive">
     <img src="{{ url_for('static', filename = 'allsightings.png') }}" />
 
     {%for r in sights %}
@@ -44,7 +44,7 @@
 
     {%endfor%}
   </div>
-  <div class="col-2"></div>
+  <div class="col-0 col-lg-2"></div>
 </div>
 
 
