table sizing for profile page

--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -1,8 +1,8 @@
 {% extends "index.template.html" %} {% block content %}
 
 <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8 content-lastfive">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8 content-lastfive">
     <table class="table">
       <thead class="thead-dark">
         <tr>
@@ -61,7 +61,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-2"></div>
+  <div class="col-0 col-lg-2"></div>
 </div>
 
 {% endblock %}
