--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -25,11 +25,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
+      
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Profile
@@ -38,16 +36,19 @@
             <!-- email search -->
             <form class="form-inline my-2 my-lg-0" method="POST" action="{{ url_for('search_process') }}">
                 <input class="form-control mr-sm-2" type="search" placeholder="Email" name="useremail" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Let's go</button>
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Let's go</button>
             </form>
 
         </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
     <!-- search country,dive sites, species -->
     <form class="form-inline my-2 my-lg-0" id='search-form' method="POST" action="{{ url_for('search_all_process') }}">
       <input class="form-control mr-sm-2" id="allsearch-form" type="search" placeholder="Country,Dive sites,Species" aria-label="Search" name="search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
     </form>
 
 
