required text fields

--- a/templates/createdive.template.html
+++ b/templates/createdive.template.html
@@ -5,19 +5,19 @@
 
     <form method="POST" >
         <label>Location</label>
-        <input type="text" name="location"/>
+        <input type="text" name="location" required/>
         <br/>
         <label>Dive Site</label>
-        <input type="text" name="divesite"/>
+        <input type="text" name="divesite" required/>
         <br/>
         <label>Temperature</label>
-        <input type="text" name="temperature"/>
+        <input type="text" name="temperature" required/>
         <br/>
         <label>Depth</label>
-        <input type="text" name="depth"/>
+        <input type="text" name="depth" required/>
         <br/>
         <label>Date</label>
-        <input type="date" name="date"/>
+        <input type="date" name="date" required/>
         <br/>
         <label>Comments</label>
         <input type="text" name="comments"/>
