--- a/templates/createsighting.template.html
+++ b/templates/createsighting.template.html
@@ -6,7 +6,7 @@
 
     <form method="POST" >
         <label>Species</label>
-        <input type="text" name="species"/>
+        <input type="text" name="species" required/>
         <br/>
         <label>Comments</label>
         <input type="text" name="comments"/>
