--- a/templates/editdive.template.html
+++ b/templates/editdive.template.html
@@ -5,19 +5,19 @@
 
     <form method="POST" >
         <label>Location</label>
-        <input type="text" name="location" value="{{dives.location}}"/>
+        <input type="text" name="location" value="{{dives.location}}" required/>
         <br/>
         <label>Dive Site</label>
-        <input type="text" name="divesite" value="{{dives.divesite}}"/>
+        <input type="text" name="divesite" value="{{dives.divesite}}" required/>
         <br/>
         <label>Temperature</label>
-        <input type="text" name="temperature" value="{{dives.temperature}}"/>
+        <input type="text" name="temperature" value="{{dives.temperature}}" required/>
         <br/>
         <label>Depth</label>
-        <input type="text" name="depth" value="{{dives.depth}}"/>
+        <input type="text" name="depth" value="{{dives.depth}}" required/>
         <br/>
         <label>Date</label>
-        <input type="date" name="date" value="{{dives.date}}"/>
+        <input type="date" name="date" value="{{dives.date}}" required/>
         <br/>
         <label>Comments</label>
         <input type="text" name="comments" value="{{dives.comments}}"/>
