--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,7 @@ tr:hover {
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .back-btn:hover {opacity: 1}
