--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -5,7 +5,7 @@
   <div class="col-12 col-lg-8 content-lastfive">
   <img src="{{ url_for('static', filename = 'divelogs.png') }}" />
     
-    {%for r in dives %}
+    {%for r in results %}
     <table class="table">
       <thead class="thead-dark">
         <tr>
@@ -94,6 +94,34 @@
   <div class="col-0 col-lg-2"></div>
 </div>
 
+<div>
+
+ 
+
+{%if max_pages >=6  %}
+    {%if current_page < 4  %}
+        {%for p in range(1,6)%}
+        <a href="?page={{p}}">{{p}}</a>
+        {%endfor%}
+
+    {% elif (current_page >= 4) and ((max_pages - current_page) >= 3) %}
+        {%for p in range(current_page - 3,current_page + 3)%}
+        <a href="?page={{p}}">{{p}}</a>
+        {%endfor%}
+
+    {% elif (current_page >= 4) and ((max_pages - current_page) < 3) %}
+        {%for p in range(current_page - 3, max_pages)%}
+        <a href="?page={{p}}">{{p}}</a>
+        {%endfor%}
+    {%endif%}  
+
+{%else%}
+    {%for p in range(1,max_pages)%}
+            <a href="?page={{p}}">{{p}}</a>
+            {%endfor%}
+{%endif%}  
+
+</div>
 
 <div>
     <button class='back-btn' onclick="goBack()">Back To Profile</button>
