update pagination active tab

--- a/static/style.css
+++ b/static/style.css
@@ -42,4 +42,9 @@ tr:hover {
   border-radius: 10px;
 }
 
-.back-btn:hover {opacity: 1}
+.pagination a.active {
+  background-color: blue;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
