update pagination for max page less than 6

--- a/static/style.css
+++ b/static/style.css
@@ -48,3 +48,11 @@ tr:hover {
 }
 
 .pagination a:hover:not(.active) {background-color: #ddd;}
+
+.pagination-div {
+    text-align: center;
+}
+
+.pagination-nav {
+    display: inline-block;
+}
