--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -94,8 +94,8 @@
   <div class="col-0 col-lg-2"></div>
 </div>
 
-<div>
-<nav aria-label="...">
+<div class='pagination-div'>
+<nav aria-label="..." class='pagination-nav'>
     <ul class="pagination">
 {%if max_pages >=6  %}
     {%if current_page < 4  %}
@@ -142,11 +142,14 @@
             <li class="page-item ">
                 <a class="page-link " href="?page=4" >4</a>
             </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=5" >5</a>
+            </li>
             
         {%endif%}
 
     {% elif (current_page >= 4) and ((max_pages - current_page) >= 3) %}
-        {%for p in range(current_page - 3,current_page-1)%}
+        {%for p in range(current_page - 3,current_page)%}
         <li class="page-item ">
         <a class="page-link " href="?page={{p}}" >{{p}}</a>
         </li>
@@ -181,12 +184,93 @@
         {%endfor%}
     {%endif%}  
 
+<!-- max page 1 to 5  -->
 {%else%}
-    {%for p in range(1,max_pages)%}
+    {%if current_page == 1  %}
             <li class="page-item ">
-        <a class="page-link active" href="?page={{p}}" >{{p}}</a>
-        </li>
+                <a class="page-link active" href="?page=1" >1</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
             {%endfor%}
+            
+
+        {%elif current_page == 2  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=2" >2</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+            
+
+        {%elif current_page == 3  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=3" >3</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+
+
+        {%elif current_page == 4  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=4" >4</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+
+
+        {%elif current_page == 5  %}
+            <li class="page-item ">
+                <a class="page-link " href="?page=1" >1</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=2" >2</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=3" >3</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link " href="?page=4" >4</a>
+            </li>
+            <li class="page-item ">
+                <a class="page-link active" href="?page=5" >5</a>
+            </li>
+            {%for p in range(current_page+1, max_pages+1)%}
+            <li class="page-item ">
+                <a class="page-link " href="?page={{p}}" >{{p}}</a>
+            </li>
+            {%endfor%}
+            
+        {%endif%}
 {%endif%}  
 
 </ul>
