added pagination for all sightings

--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -94,6 +94,7 @@
   <div class="col-0 col-lg-2"></div>
 </div>
 
+<!-- Pagination -->
 <div class='pagination-div'>
 <nav aria-label="..." class='pagination-nav'>
     <ul class="pagination">
@@ -276,7 +277,7 @@
 </ul>
     </nav>
 </div>
-
+<!-- end of pagination -->
 
 
 <div>
