--- a/templates/per_sights.template.html
+++ b/templates/per_sights.template.html
@@ -37,6 +37,11 @@
         </tr>
         <tr>
           <th colspan="3">
+            <a class="backprofile" href="{{ url_for('profile' , userid=r.userid) }}">Back to profile</a>
+          </th>
+        </tr>
+        <tr>
+          <th colspan="3">
             <a class='delete-btn' href="{{ url_for('delete' , diveid=r.diveid , userid=r.userid, sightid=r._id, delete_status='s') }}">Delete Sighting </a>
           </th>
         </tr>
@@ -50,7 +55,7 @@
 
 
 <div>
-    <button class='back-btn' onclick="goBack()">Back To Dive Log</button>
+    <button class='back-btn' onclick="goBack()">Back</button>
 </div>
 
 {% endblock %}
