update create profile form template

--- a/templates/editdive.template.html
+++ b/templates/editdive.template.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <form method="POST" >
-        <label>Location</label>
+        <label>Country</label>
         <input type="text" name="location" value="{{dives.location}}" required/>
         <br/>
         <label>Dive Site</label>
