--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -46,7 +46,7 @@
         <tr>
           <th colspan="2">
             <a href="{{ url_for('createdive' , userid=database._id) }}"
-              >Create new dive log</a
+              >Create new Dive Log</a
             >
           </th>
         </tr>
