--- a/templates/createuser.template.html
+++ b/templates/createuser.template.html
@@ -4,23 +4,56 @@
 
 {% block content %}
 
-    <form method="POST" action="{{ url_for('createuser') }}">
-        <label>First Name</label>
-        <input type="text" name="first_name" required/>
-        <label>Last Name</label>
-        <input type="text" name="last_name" required/>
-        <br/>
-        <label>Experience</label>
-        <input type="text" name="experience" required/>
-        <br/>
-        <label>Certification</label>
-        <input type="text" name="certification" required/>
-        <br/>
-        <label>Email</label>
-        <input type="text" name="useremail" value="{{useremail}}" required readonly/>
-        <br/>
-        <input type="hidden" role="uploadcare-uploader" name="photos" />
-        <input type="submit"/>
-    </form>
+    <div class="card card-outline-secondary">
+                        <div class="card-header">
+                            <h3 class="mb-0">User Information</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form" role="form" autocomplete="off" method="POST" action="{{ url_for('createuser') }}">
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">First name</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="first_name" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Last name</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="last_name" required>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Experience</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="experience" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Certification</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="certification" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Email</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="text" name="useremail" value="{{useremail}}" required readonly>
+                                    </div>
+                                </div>
+                                 <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Display Photo</label>
+                                    <div class="col-lg-9">
+                                        <input class="form-control" type="hidden" role="uploadcare-uploader" name="photos" >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label"></label>
+                                    <div class="col-lg-9">
+                                       <input type="submit"/>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
 
 {% endblock %}
