update delete confirmation template

--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -18,10 +18,10 @@
       </thead>
       <tbody>
         <tr>
-         <th scope="col">
+         <th style="text-align:center" scope="col">
             Experience
           </th>
-          <th>{{database.experience}}</th>
+          <th style="text-align:center">{{database.experience}}</th>
         </tr>
         <tr>
         <th scope="col">
